--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,58 @@
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="backTrasnp card bg-dark text-white" style="border-radius: 1rem;">
+          <!--inicio logo centrado-->
+          <div class="d-flex justify-content-center">
+            <div class="brand_logo_container">
+              <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png"
+                class="brand_logo" alt="Logo">
+            </div>
+          </div>
+          <!--fin logo centrado-->
+          <div class="card-body p-5 text-center">
 
-<div class="container">
-  <div class="card-header">
-    <div class="card-body">
-      <h3>Ingresar</h3>
-      <div class="form-group">
-        <input type="text" class="form-control m-2" placeholder="Username" #userName required>
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control m-2" placeholder="Password" #userPassword required>
-      </div>
-      <!-- Calling SignIn Api from AuthService -->
-      <div class="form-group">
-        <input type="button" class="btn btn-primary btn-lg btn-block m-2" value="Log in" >
-      </div>
+            <div class="mb-md-5 mt-md-4 pb-5">
 
-      <div   class="form-group">
-        <input  class="btn btn-primary btn-lg btn-block m-2 log-out" value="Log out" >
+              <h2 class="pt-5 fw-bold mb-3 text-uppercase">Login</h2>
+              <p *ngIf="!this.isLogginFail" class="text-white-50 mb-5">login component Por favor, ingresar usuario y
+                clave</p>
+              <p *ngIf="this.isLogginFail" class="text-warning mb-5">Nombre de usuario incorrecto, intente nuevamente.
+              </p>
+
+
+              <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
+                    [(ngModel)]="nombreUsuario" required />
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <input type="password" id="password" name="password" class="form-control form-control-lg"
+                    [(ngModel)]="password" required />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+
+                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
+
+                <button *ngIf="!this.isLogged" class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                <button *ngIf="this.isLogged" class="btn btn-danger btn-lg px-5" (click)="logout()">Logout</button>
+              </form>
+
+            </div>
+
+            <!-- <div>
+                <p class="mb-0">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                </p>
+              </div>
+            -->
+
+          </div>
+        </div>
       </div>
-
-      
-  
-      
-
     </div>
-
-
-
   </div>
-</div>
+</section>
