--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -39,4 +39,7 @@
         <button class="btn-danger" (click)="logout()">Logout</button>
         <p *ngIf="this.isAdmin">usuario Admin Activo</p>
         <p *ngIf="!this.isAdmin">usuario NOAdmin</p>
+        <div *ngFor="let prueba of pruebas">
+            <p>Prueba de párrafo {{prueba.nombre_experiencia}}</p>
+        </div>
     </div>
