--- a/src/app/botones/edit-experiencia-button/edit-experiencia-button.component.html
+++ b/src/app/botones/edit-experiencia-button/edit-experiencia-button.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="this.isAdmin">
+<div>
 
     <button class="btn btn-secondary bi bi-pencil m-2" (click)="Editar();"><span
             class="glyphicon glyphicon-pencil"></span> Editar experiencia</button>
