auth token guard

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,6 +9,6 @@ Documento: {{this.persona.dni}}<br>
 
 </p>
 <p *ngIf="!this.persona">
-    <span style="border: 4px solid red; color:red; font-size: large">...Esperando datos del servidor</span>
+    <span style="border: 4px solid rgb(121, 101, 209); color:rgb(92, 99, 106); font-size: large">...Esperando datos del servidor</span>
 
 </p>
