--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,9 +25,9 @@
               <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 
                 <div class="form-outline form-white mb-4">
-                  <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
-                    [(ngModel)]="nombreUsuario" required />
-                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                  <input type="email" id="userName" name="userName" class="form-control form-control-lg"
+                    [(ngModel)]="userName" required />
+                  <label class="form-label" for="userName">Usuario</label>
                 </div>
 
                 <div class="form-outline form-white mb-4">
